package work02;

public interface Sorter {

	public void load(int[] content);
	public void sort();
	public String getPlan();
	
}
